@@ -29,7 +29,7 @@ INCLUDES = \
 	@WITH_LIBELF_INCLUDE@ \
 	@INCPATH@
 
-staticLDFLAGS = @LDFLAGS_NPTL@ @LDFLAGS_STATIC@
+staticLDFLAGS = # @LDFLAGS_NPTL@ @LDFLAGS_STATIC@
 
 myLDFLAGS = @WITH_LIBELF_LIB@ @WITH_BEECRYPT_LIB@
 
