@@ -51,12 +51,8 @@
 # define	_LARGEFILE64_SOURCE
 #endif
 
-#if defined(sun)
+#if !defined(_D_EXACT_NAMLEN) 
 # define _D_EXACT_NAMLEN(d) (strlen((d)->d_name))
-#endif
-
-#if defined(__APPLE__)
-# define _D_EXACT_NAMLEN(d) ((d)->d_reclen)
 #endif
 
 #endif
